work/20230216/example-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc-clusterip
spec:
  type: ClusterIP
  selector:
    appname: example-pod
  ports:
  - name: example-web
    port: 80
    targetPort: 80
    protocol: TCP
