work/20230216/example-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc-lb
spec:
  type: LoadBalancer
  selector:  
    app: example-rs
  ports:
  - port: 80
    targetPort: 8080
