work/20230216/example-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc-np
spec:
  type: NodePort
  selector:
    appname: example-pod
  ports:
    port: 80
    targetPort: 80
    nodePort: 31111
