work/20230216/test-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-nodeport
spec:
  type: NodePort
  selector:
    app: example-rs
  ports:
  - port: 80
    targetPort: 8080
